--- a/package.json
+++ b/package.json
@@ -2,10 +2,21 @@
   "name": "graphql-api-with-apollo-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "watch:build": "npm run build --watch",
+    "start": "node lib/index.js",
+    "watch:start": "nodemon npm run start",
+    "dev": "concurrently 'npm:watch:*'"
   },
-  "author": "hushin <nnnnot+github@gmail.com>",
-  "license": "MIT"
+  "private": "true",
+  "dependencies": {
+    "apollo-server": "^3.6.3",
+    "graphql": "^16.3.0"
+  },
+  "devDependencies": {
+    "concurrently": "^7.0.0",
+    "nodemon": "^2.0.15",
+    "typescript": "^4.5.5"
+  }
 }
