--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "watch:build": "npm run build --watch",
     "start": "node lib/index.js",
     "watch:start": "nodemon npm run start",
-    "dev": "concurrently 'npm:watch:*'"
+    "dev": "concurrently 'npm:watch:*'",
+    "generate": "graphql-codegen"
   },
   "private": "true",
   "dependencies": {
     "apollo-server": "^3.6.3",
-    "graphql": "^16.3.0"
+    "graphql": "^16.3.0",
+    "graphql-relay": "^0.10.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^2.6.1",
+    "@graphql-codegen/typescript": "^2.4.3",
+    "@graphql-codegen/typescript-resolvers": "^2.5.0",
     "concurrently": "^7.0.0",
     "nodemon": "^2.0.15",
     "typescript": "^4.5.5"
